# ecpac

./: .gitignore  .pre-commit-config.yaml  README.md  ecpac.html  index.html  pyproject.toml  search.js  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yaml  support_request.yaml
.github/workflows/: workflows.yml
ecpac/: bash_builder.html  cli.html  cli_utils.html  consts.html  fsplan.html  icons.html  main.html  slack.html  utils.html
src/ecpac/: bash_builder.py  cli.py  consts.py  fsplan.py  icons.py  main.py  slack.py  utils.py
tests/: dummy_test.py
