[metadata]
name = ecpac
version = 0.0.1
author = Florian Rupprecht
description = Easy C-PAC execution on SLURM clusters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nx10/ecpac
project_urls =
    Bug Tracker = https://github.com/nx10/ecpac/issues
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
    click
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    ecpac = ecpac.main:main

[options.packages.find]
where = src